--- a/render.yaml
+++ b/render.yaml
@@ -4,7 +4,7 @@ services:
     env: java
     region: oregon
     branch: main
-    buildCommand: ./mvnw clean package
+    buildCommand: ./mvnw clean package -DskipTests
     startCommand: java -jar target/comedor-app-0.0.1-SNAPSHOT.jar
     envVars:
       - key: SPRING_DATASOURCE_URL
@@ -15,5 +15,4 @@ services:
         value: EswlonnVdzmh9AoMTEbYBii6kngjrMLF
       - key: SPRING_JPA_HIBERNATE_DDL_AUTO
         value: update
-
 
